--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "browser": "browserify ./src/index.js -o ./dist/janus.js",
-    "test": "$(npm bin)/mocha"
+    "test": "$(npm bin)/mocha",
+    "test-codecov": "$(npm bin)/istanbul cover $(npm bin)/_mocha -- -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
   },
   "dependencies": {
     "bluebird": "~3.0.0",
@@ -19,9 +20,11 @@
   },
   "devDependencies": {
     "chai": "^2.1.2",
+    "codecov.io": "^0.1.6",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-rename": "^1.2.2",
+    "istanbul": "^0.4.2",
     "mocha": "^1.21.5",
     "sinon": "^1.17.3",
     "underscore": "^1.8.3",
