Draft for createPeerConnection

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bluebird": "~3.0.0",
+    "webrtcsupport": "^2.2.0",
     "websocket": "^1.0.22"
   },
   "devDependencies": {
