--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "webrtc-adapter": "^1.2.2",
     "ws": "^1.0.1"
   }
 }
