--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "istanbul": "^0.4.2",
+    "jquery": "^3.0.0",
     "mocha": "^1.21.5",
     "sinon": "^1.17.3",
     "underscore": "^1.8.3",
