--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browserify": "^13.0.0",
     "chai": "^2.1.2",
     "codecov.io": "^0.1.6",
+    "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-rename": "^1.2.2",
