remove export of DISPLAY from package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "browser": "browserify ./src/index.js -o ./dist/janus.js",
-    "test": "$(npm bin)/mocha && export DISPLAY=:99 && $(npm bin)/karma start test/karma.conf.js",
+    "test": "$(npm bin)/mocha && $(npm bin)/karma start test/karma.conf.js",
     "test-codecov": "$(npm bin)/istanbul cover $(npm bin)/_mocha -- -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
   },
   "dependencies": {
