Include pre test into test-codecov

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "browser": "browserify ./src/index.js -o ./dist/janus.js",
     "build": "npm install && $(npm bin)/gulp",
     "test": "$(npm bin)/mocha && $(npm bin)/karma start test/karma.conf.js",
-    "test-codecov": "$(npm bin)/istanbul cover $(npm bin)/_mocha -- -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
+    "test-codecov": "npm test && $(npm bin)/istanbul cover $(npm bin)/_mocha -- -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
   },
   "dependencies": {
     "bluebird": "^3.0.0",
