--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "browserify": "^13.0.0",
     "chai": "^2.1.2",
-    "codecov.io": "^0.1.6",
+    "codecov": "^1.0.1",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
