--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bluebird": "^3.0.0",
+    "eventemitter2": "^2.1.3",
     "webrtc-adapter": "~1.1.0",
     "webrtcsupport": "^2.2.0",
     "websocket": "^1.0.22"
