--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npm install && $(npm bin)/gulp",
     "test": "$(npm bin)/mocha --exit",
     "test-and-integrate": "$(npm bin)/mocha --exit && $(npm bin)/karma start test/karma.conf.js",
-    "test-codecov": "$(npm bin)/istanbul cover $(npm bin)/_mocha -- -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
+    "test-codecov": "$(npm bin)/istanbul cover $(npm bin)/_mocha -- --exit -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
   },
   "dependencies": {
     "bluebird": "^3.0.0",
