--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "chai": "^2.1.2",
     "exorcist": "^0.4.0",
     "exposify": "^0.5.0",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-param": "^1.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.7",
     "istanbul": "^0.4.2",
     "jquery": "^3.0.0",
     "karma": "^4.3.0",
