--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test-codecov": "$(npm bin)/istanbul cover $(npm bin)/_mocha -- --exit -R spec && cat ./coverage/coverage.json | $(npm bin)/codecov"
   },
   "dependencies": {
-    "bluebird": "3.5.5",
+    "bluebird": "^3.7.2",
     "eventemitter2": "^2.1.3",
     "webrtc-adapter": "~1.1.0",
     "webrtcsupport": "^2.2.0",
